--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>holitor</title>
+  <title>holitorスーパー</title>
   <style>
     body {
       margin: 0;
@@ -81,7 +81,7 @@
 <body>
 
   <header>
-    <h1>holitor</h1>
+    <h1>holitorスーパー</h1>
     <p>地域密着・毎日新鮮！</p>
   </header>
 
@@ -98,7 +98,7 @@
   <div class="container" id="about">
     <h2>お店について</h2>
     <p>
-      holitorは、地域の皆さまに愛されるスーパーマーケットです。 
+      holitorスーパーは、地域の皆さまに愛されるスーパーマーケットです。 
       新鮮な野菜・お肉・お魚を毎日取りそろえています。
     </p>
   </div>
@@ -109,29 +109,50 @@
       <div class="item">
         <img src="https://images.unsplash.com/photo-1567306226416-28f0efdc88ce" alt="野菜" />
         <h3>新鮮野菜セット</h3>
-        <p>地元農家直送！</p>
+        <p>地元農家から毎朝届く、旬の野菜をたっぷり。</p>
       </div>
       <div class="item">
         <img src="https://images.unsplash.com/photo-1604908176997-125f25cc6f3d" alt="肉" />
         <h3>国産牛ステーキ</h3>
-        <p>特売価格！</p>
+        <p>やわらかさと旨みが自慢の一品。</p>
       </div>
       <div class="item">
         <img src="https://images.unsplash.com/photo-1544025162-d76694265947" alt="魚" />
         <h3>本日の鮮魚</h3>
-        <p>朝獲れ新鮮</p>
+        <p>朝獲れならではの鮮度をそのまま食卓へ。</p>
+      </div>
+      <div class="item">
+        <img src="images/image.png" alt="屋久島" />
+        <h3>屋久島の恵み</h3>
+        <p>深い森と清らかな水に育まれた、屋久島の自然。</p>
+      </div>
+      <div class="item">
+        <img src="images/image (1).png" alt="フィリピン" />
+        <h3>フィリピンの海</h3>
+        <p>青く澄んだ海と陽気な風を感じる南国の景色。</p>
+      </div>
+      <div class="item">
+        <img src="images/image (2).png" alt="佐渡" />
+        <h3>佐渡の山景色</h3>
+        <p>四季折々の表情を見せる、佐渡の雄大な自然。</p>
+      </div>
+      <div class="item">
+        <img src="images/image (3).png" alt="長野" />
+        <h3>長野の清流</h3>
+        <p>澄んだ水と緑に包まれた、心落ち着く風景。</p>
       </div>
     </div>
+  </div>
   </div>
 
   <div class="container" id="access">
     <h2>アクセス</h2>
-    <p></p>
-    <p></p>
+    <p>〒952-1501 新潟県佐渡市下相川１３０５</p>
+    <p>営業時間：9:00〜9:01</p>
   </div>
 
   <footer>
-    <p>holitorスーパー</p>
+    <p>© 2026 holitorスーパー</p>
   </footer>
 
 </body>
