--- a/index.html
+++ b/index.html
@@ -5,35 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>holitorスーパー</title>
   <style>
+  .flyer-full {
+      width: 100%;
+      max-width: 800px; 
+      margin: 20px auto;
+      background: white;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+  
+    .flyer-full img {
+      width: 100%;       /* 横幅いっぱいに広げる */
+      height: auto;      /* 比率を維持 */
+      border-radius: 5px;
+      display: block;
+      margin-bottom: 15px;
+    }
     body {
       margin: 0;
       font-family: "Hiragino Kaku Gothic ProN", "Yu Gothic", sans-serif;
       background: #f7f7f7;
       color: #333;
     }
+
     header {
       background: #2e8b57;
       color: white;
       padding: 20px;
       text-align: center;
     }
+
     nav {
       background: #1f6b43;
       display: flex;
       justify-content: center;
       gap: 30px;
       padding: 10px 0;
+      flex-wrap: wrap;
     }
+
     nav a {
       color: white;
       text-decoration: none;
       font-weight: bold;
     }
+
     nav a:hover {
       text-decoration: underline;
     }
+
     .hero {
-      background: url('https://images.unsplash.com/photo-1542838132-92c53300491e') center/cover;
+      background: url("https://images.unsplash.com/photo-1542838132-92c53300491e") center/cover;
       height: 300px;
       display: flex;
       align-items: center;
@@ -43,21 +67,25 @@
       font-size: 28px;
       font-weight: bold;
     }
+
     .container {
       padding: 40px 20px;
       max-width: 1000px;
       margin: auto;
     }
+
     h2 {
       border-left: 6px solid #2e8b57;
       padding-left: 10px;
     }
+
     .items {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 20px;
       margin-top: 20px;
     }
+
     .item {
       background: white;
       border-radius: 10px;
@@ -65,10 +93,14 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       text-align: center;
     }
+
     .item img {
       width: 100%;
-      border-radius: 10px;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 20px;
     }
+
     footer {
       background: #333;
       color: white;
@@ -88,6 +120,8 @@
   <nav>
     <a href="#about">お店について</a>
     <a href="#items">おすすめ商品</a>
+    <a href="#flyer">チラシ</a>
+    <a href="#water">海水販売</a>
     <a href="#access">アクセス</a>
   </nav>
 
@@ -95,56 +129,74 @@
     新鮮・安心・おトク
   </div>
 
+  <!-- お店について -->
   <div class="container" id="about">
     <h2>お店について</h2>
     <p>
-      holitorスーパーは、地域の皆さまに愛されるスーパーマーケットです。 
+      holitorスーパーは、地域の皆さまに愛されるスーパーマーケットです。
       新鮮な野菜・お肉・お魚を毎日取りそろえています。
     </p>
   </div>
 
+  <!-- おすすめ商品 -->
   <div class="container" id="items">
     <h2>おすすめ商品</h2>
     <div class="items">
       <div class="item">
-        <img src="https://images.unsplash.com/photo-1567306226416-28f0efdc88ce" alt="野菜" />
+        <img src="https://images.unsplash.com/photo-1567306226416-28f0efdc88ce" alt="野菜">
         <h3>新鮮野菜セット</h3>
         <p>地元農家から毎朝届く、旬の野菜をたっぷり。</p>
       </div>
+
       <div class="item">
-        <img src="https://images.unsplash.com/photo-1604908176997-125f25cc6f3d" alt="肉" />
+        <img src="https://images.unsplash.com/photo-1604908176997-125f25cc6f3d" alt="肉">
         <h3>国産牛ステーキ</h3>
         <p>やわらかさと旨みが自慢の一品。</p>
       </div>
+
       <div class="item">
-        <img src="https://images.unsplash.com/photo-1544025162-d76694265947" alt="魚" />
+        <img src="https://images.unsplash.com/photo-1544025162-d76694265947" alt="魚">
         <h3>本日の鮮魚</h3>
         <p>朝獲れならではの鮮度をそのまま食卓へ。</p>
       </div>
+
       <div class="item">
-        <img src="images/image.png" alt="屋久島" />
+        <img src="images/image.png" alt="屋久島">
         <h3>屋久島の恵み</h3>
         <p>深い森と清らかな水に育まれた、屋久島の自然。</p>
       </div>
+
       <div class="item">
-        <img src="images/image (1).png" alt="フィリピン" />
+        <img src="images/image (1).png" alt="フィリピン">
         <h3>フィリピンの海</h3>
         <p>青く澄んだ海と陽気な風を感じる南国の景色。</p>
       </div>
+
       <div class="item">
-        <img src="images/image (2).png" alt="佐渡" />
+        <img src="images/image (2).png" alt="佐渡">
         <h3>佐渡の山景色</h3>
         <p>四季折々の表情を見せる、佐渡の雄大な自然。</p>
       </div>
+
       <div class="item">
-        <img src="images/image (3).png" alt="長野" />
+        <img src="images/image (3).png" alt="長野">
         <h3>長野の清流</h3>
         <p>澄んだ水と緑に包まれた、心落ち着く風景。</p>
       </div>
     </div>
   </div>
-  </div>
 
+  <!-- チラシ -->
+  <div class="container" id="flyer">
+    <h2>今週のチラシ</h2>
+    <div class="flyer-full">
+        <img src="images/image (6).png" alt="今週のチラシ">
+        <h3>今週の特売</h3>
+        <p>野菜・お肉・鮮魚がお買い得！</p>
+      </div>
+    </div>
+  </div>
+  <!-- アクセス -->
   <div class="container" id="access">
     <h2>アクセス</h2>
     <p>〒952-1501 新潟県佐渡市下相川１３０５</p>
