--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 </nav>
 
 <div class="hero">
-  新鮮・安心・おトク（※9:01まで）
+  新鮮・安心・おトク
 </div>
 
 <div class="container" id="about">
@@ -190,6 +190,7 @@
   <h2>アクセス</h2>
   <p>〒952-1501 新潟県佐渡市下相川１３０５</p>
   <p>営業時間：9:00〜9:01</p>
+  <p>入場料一万円</p>
 </div>
 
 <footer>
