--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
   <a href="#items">おすすめ商品</a>
   <a href="#flyer">チラシ</a>
   <a href="#stamp">スタンプカード</a>
+  <a href="introduction">自己紹介</a>
   <a href="#access">アクセス</a>
   <button class="bgm-btn" onclick="toggleBGM()">♪ BGM</button>
 </nav>
@@ -199,7 +200,7 @@
 <div class="container" id="flyer">
   <h2>今週のチラシ</h2>
   <div class="flyer-full">
-    <img src="images/image (6).png">
+    <img src="images/image(9).png">
     <p>※見てるだけでお腹が空きます</p>
   </div>
 </div>
@@ -208,6 +209,13 @@
   <h2>スタンプカード</h2>
   <div class="flyer-full">
     <img src="images/image (7).jpeg">
+  </div>
+</div>
+
+<div class="container" id="introduction">
+  <h2>自己紹介</h2>
+  <div class="flyer-full">
+    <img src="images/image (8).png" alt="">
   </div>
 </div>
 
